--- a/packages/ui/scss/components/_Multiselect.scss
+++ b/packages/ui/scss/components/_Multiselect.scss
@@ -72,6 +72,7 @@
   .multiselect__content {
     @extend .dropdown-menu;
     max-height: 20rem;
+    max-width: 100%;
     overflow: auto;
     left: 0;
   }
